# nadi-cli

./: .gitignore  Cargo.toml  connections.txt  test.tasks  test.template
src/: main.rs
