[package]
name = "nadi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.17", features = ["derive"] }
nadi_core = {version = "0.4.0", path="../nadi_core", features=["functions"]}
